started fixing alignment, readding header

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
 #root {
   background: tomato;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+/* Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  /* display: none  */
+}
+/* Edge, Firefox */
+body,
+html {
+  /* -ms-overflow-style: none;
+  scrollbar-width: none; */
 }
 
 .navbar {
@@ -13,6 +28,7 @@
 
 .appStackContainer {
   flex-direction: column-reverse !important;
+  height: 100%;
 }
 
 .memeImgContainer {
